--- a/micapp/pages/home/index.scss
+++ b/micapp/pages/home/index.scss
@@ -1,3 +1,13 @@
+.tips{
+  height: 64rpx;
+  padding: 0 40rpx;
+  margin-bottom: 24rpx;
+  font-size: 26rpx;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
+  background-color: #EDFAF5;
+}
 .hospital_list {
   background-color: #FFFFFF;
   border-radius: 24rpx;
