--- a/micapp/pages/home/index.wxml
+++ b/micapp/pages/home/index.wxml
@@ -1,6 +1,9 @@
 <!--pages/home/index.wxml-->
 <view>
-  <van-notice-bar left-icon="volume-o" text="在代码阅读过程中人们说脏话的频率是衡量代码质量的唯一标准。" color="#545454" background="rgb(69, 170, 66, 0.2)" />
+  <view class="tips">
+  <text>关注“康力得”微信公众号，及时获取消息通知</text>
+  <van-button type="primary" color="#18ACB4" round size="mini">关注</van-button>
+  </view>
   <view class="user_list">
     <view class="user_list_header">
       <view class="user_list_header_title">
